# suno-assistant

./: .gitignore  ARCHITECTURE.md  QUICK_START.md  README.md  TAURI_MIGRATION_PLAN.md  TODO.md  index.html  meta-tags.txt  package.json  vite.config.ts
scripts/: build-tag-library.js  parse-meta-tags.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/utils/: mod.rs
src/assets/tags/: README.md  comprehensive-library.json  full-library.json  sample-tags.json  style-personality.json
src/lib/: tauri.ts  utils.ts
src/stores/: usePromptStore.ts  useTagStore.ts
src/types/: index.ts
